Fixed some typos, added lectures in pdf

--- a/Algebra-and-Geometry/2nd-Semester/Colloquium/33.ipynb
+++ b/Algebra-and-Geometry/2nd-Semester/Colloquium/33.ipynb
@@ -60,7 +60,8 @@
     "- их количество равно $ n_q - n_{q - 1} $  \n",
     "- $ t_q = n_q - n_{q - 1} = (n_q - n_{q - 1}) - (n_{q + 1} - n_q) = -n_{q + 1} + 2n_q - n_{q - 1} $, т.к. $ n_{q + 1} = n_q $\n",
     "- Никакая нетривиальная линейная комбинация этих векторов не принадлежит $ N_{q - 1} $ (назовём их линейно независимыми над $ N_{q - 1} $)\n",
-    "$ N_{q - 1} $) Построим векторы $ \\mathcal B f_1, \\mathcal B f_2, \\dots, \\mathcal B f_{t_q} $ эти векторы являются корневыми высоты $ q - 1 $ и они линейно независимы над $ N_{q - 2} $. Дополним их векторами $ g_1, \\dots, g_{t_{q - 1}} \\in N_{q - 1} $ так, чтобы вектора $  \\mathcal B f_1, \\mathcal B f_2, \\dots, \\mathcal B f_{t_q}, g_1, \\dots, g_{t_{q - 1}} $ дополняли произвольный базис $ N_{q} $ до базиса $ N_{q - 1} $. Выполняем такие же построения до пространства $ N_1 $.\n",
+    "\n",
+    "$ N_{q - 1} $) Построим векторы $ \\mathcal B f_1, \\mathcal B f_2, \\dots, \\mathcal B f_{t_q} $ эти векторы являются корневыми высоты $ q - 1 $ и они линейно независимы над $ N_{q - 2} $. Дополним их векторами $ g_1, \\dots, g_{t_{q - 1}} \\in N_{q - 1} $ так, чтобы вектора $  \\mathcal B f_1, \\mathcal B f_2, \\dots, \\mathcal B f_{t_q}, g_1, \\dots, g_{t_{q - 1}} $ дополняли произвольный базис $ N_{q - 2} $ до базиса $ N_{q - 1} $. Выполняем такие же построения до пространства $ N_1 $.\n",
     "\n",
     "В итоге получаем вектора $  \\mathcal B^{q - 1} f_1, \\mathcal B^{q - 1} f_2, \\dots, \\mathcal B^{q - 1} f_{t_q},  \\mathcal B^{q - 2} g_1, \\mathcal B^{q - 2} g_2, \\dots, \\mathcal B^{q - 2} g_{t_{q - 1}}, \\dots, u_1, \\dots, u_{t_1} $. Эти вектора:\n",
     "- являются собственными векторами\n",
