--- a/Algebra-and-Geometry/2nd-Semester/Colloquium/35.ipynb
+++ b/Algebra-and-Geometry/2nd-Semester/Colloquium/35.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "Докажем сначала для комплексного пространаства. Берём рандомный вектор $ x $, раскладываем его по корневым подпространствам - $ x = x_1 + \\dots + x_p $. Далее домножаем слева все векторы на $ f(\\mathcal A) $. Получаем $ f(\\mathcal A x_j = (\\mathcal{\\lambda_1I - A})^{m_1} \\dots (\\mathcal{\\lambda_jI - A})^{m_j} \\dots (\\mathcal{\\lambda_pI - A})^{m_p} = \\theta $, так как множители-матрицы перестановочны, а $ (\\mathcal{\\lambda_jI - A})^{m_j}x_j = x_j(\\mathcal{\\lambda_jI - A})^{m_j} = \\theta \\Rightarrow f(\\mathcal A) = \\mathcal O $.\n",
+    "Докажем сначала для комплексного пространаства. Берём рандомный вектор $ x $, раскладываем его по корневым подпространствам - $ x = x_1 + \\dots + x_p $. Далее домножаем слева все векторы на $ f(\\mathcal A) $. Получаем $ f(\\mathcal A) x_j = (\\mathcal{\\lambda_1I - A})^{m_1} \\dots (\\mathcal{\\lambda_jI - A})^{m_j} \\dots (\\mathcal{\\lambda_pI - A})^{m_p} = \\theta $, так как множители-матрицы перестановочны, а $ (\\mathcal{\\lambda_jI - A})^{m_j}x_j = x_j(\\mathcal{\\lambda_jI - A})^{m_j} = \\theta \\Rightarrow f(\\mathcal A) = \\mathcal O $.\n",
     "\n",
     "Докажем для веществененого пространства. Рассмотрим вещественное пространство $ V_1 $ и его базис $ e $, в котором оператор имеет матрицу $ A_e $. Также рассмотрим комплексное пространство $ V_2 $ той же размерности и случайный базис $ f $, в котором матрица $ A_e $ является матрицей оператора $ \\mathcal{B \\in L}(V_2, V_2) $, то есть $ A_e = B_f $. Т.к. матрицы совпадают, совпадают и характеристическим многочлены операторов и $ f(A_e) = O $\n",
     "\n",
