--- a/Calculus/2nd-Semester/Lectures/1.ipynb
+++ b/Calculus/2nd-Semester/Lectures/1.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "### Определение 2\n",
     "\n",
-    "Объединением разбиени1 $ T_1 $ и $ T_2 $ называется разбиение $ T $, $ T = T_1 \\cup T_2 $.  \n",
+    "Объединением разбиений $ T_1 $ и $ T_2 $ называется разбиение $ T $, $ T = T_1 \\cup T_2 $.  \n",
     "\n",
     "Разбиение $ T' $ называется измельчением разбиения $ T $, если $ T' \\subset T $. Очевидно, что если $ T = T_1 \\cap T_2 $, то $ T $ - измельчение и $ T_1 $ и $ T_2 $"
    ]
@@ -51,7 +51,7 @@
     "\n",
     "Обозначим $ \\Delta x_k = x_k - x_{k - 1} $ - длина каждого отрезка разбиения $ T $. Диаметром разбиения $ T $ называется называется $ \\Delta_T = \\underset{1 \\leqslant k \\leqslant n}{max} \\Delta x_n $.\n",
     "\n",
-    "Диаметром разчеченного разбиения $ V $ будем считать диаметр неразмеченного разбиения, которому оно соответсвует."
+    "Диаметром размеченного разбиения $ V $ будем считать диаметр неразмеченного разбиения, которому оно соответсвует."
    ]
   },
   {
@@ -88,7 +88,7 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "Предположим, что $ \\exists I_1, I_2: i_1 \\neq I_2 $, т.ч. они удовлетворяют определнию 6. Положим в определнии $ \\varepsilon = \\frac{|I_1 - I_2|}{2} > 0 $. Тогда $ \\exists \\delta > 0: \\forall V, \\Delta_V < \\delta:  |I_1 - I_2| \\leqslant |I_1 - \\sigma(V)| + |I_2 - \\sigma(V)| < 2\\varepsilon = |I_1 - I_2| $  ?! $ \\Rightarrow I_1 = I_2 $\n",
+    "Предположим, что $ \\exists I_1, I_2: I_1 \\neq I_2 $, т.ч. они удовлетворяют определнию 6. Положим в определнии $ \\varepsilon = \\frac{|I_1 - I_2|}{2} > 0 $. Тогда $ \\exists \\delta > 0: \\forall V, \\Delta_V < \\delta:  |I_1 - I_2| \\leqslant |I_1 - \\sigma(V)| + |I_2 - \\sigma(V)| < 2\\varepsilon = |I_1 - I_2| $  ?! $ \\Rightarrow I_1 = I_2 $\n",
     "\n",
     "<strong>ч.т.д.</strong>"
    ]
@@ -103,7 +103,7 @@
     "\n",
     "### Доказательство\n",
     "\n",
-    "Предположим, что $ f $ не ограничена на $ [a, b] $. Тогда рассмотрим произвольное разбиение $ T = \\{ x_0, x_1, \\dots, x_n \\} $. Тогда найдётся отрезок $ [x_{r - 1}, x_r] $, на котором функция не ограничена. На каждом из отрезков $ [ x_{k - 1}, x_k ], k \\neq r $ выберем точку $ \\xi_k  $ произвольным образом. Обозначим $ A = \\left|\\sum_{i = 1, i \\neq r}^n f(\\xi_i)\\Delta x_i \\right| \\space $ Возьмём произвольное число $ M > 0 $. $ f $ не определена на $ [x_{r - 1}, x_r] \\Rightarrow \\exists \\xi_r \\in [x_{r - 1}, x_r] $, т.ч. $ |f(\\xi_r)| > \\frac{M + A}{\\Delta x_r} $. Тогда $ V = \\{ x_0, x_1 \\dots, x_n; \\xi_1, \\dots, \\xi_n \\} $ - размеченное разбиение $ [a, b] $, причём $ |\\sigma(V)| = |\\sum_{i = 1, i \\neq r}^n + f(\\xi_r) \\Delta x_r| \\geqslant |f(\\xi_r) -\\Delta x_r| - A > \\frac{M + A}{\\Delta x_r}\\Delta x_r - A = M $. Почучаем, что $ \\forall M > 0, \\forall T $ - разбиение $[a, b]$, $ \\exists V $ - соответсвенное разбиение: $ |\\sigma(V) > M| $ Значит определние 6 не выполняется ни для какого конечного числа $ I \\Rightarrow f \\not\\in R[a, b] $  \n",
+    "Предположим, что $ f $ не ограничена на $ [a, b] $. Тогда рассмотрим произвольное разбиение $ T = \\{ x_0, x_1, \\dots, x_n \\} $. Тогда найдётся отрезок $ [x_{r - 1}, x_r] $, на котором функция не ограничена. На каждом из отрезков $ [ x_{k - 1}, x_k ], k \\neq r $ выберем точку $ \\xi_k  $ произвольным образом. Обозначим $ A = \\left|\\sum_{i = 1, i \\neq r}^n f(\\xi_i)\\Delta x_i \\right| \\space $ Возьмём произвольное число $ M > 0 $. $ f $ не определена на $ [x_{r - 1}, x_r] \\Rightarrow \\exists \\xi_r \\in [x_{r - 1}, x_r] $, т.ч. $ |f(\\xi_r)| > \\frac{M + A}{\\Delta x_r} $. Тогда $ V = \\{ x_0, x_1 \\dots, x_n; \\xi_1, \\dots, \\xi_n \\} $ - размеченное разбиение $ [a, b] $, причём $ |\\sigma(V)| = |\\sum_{i = 1, i \\neq r}^n + f(\\xi_r) \\Delta x_r| \\geqslant |f(\\xi_r) \\Delta x_r| - A > \\frac{M + A}{\\Delta x_r}\\Delta x_r - A = M $. Почучаем, что $ \\forall M > 0, \\forall T $ - разбиение $[a, b]$, $ \\exists V $ - соответсвенное разбиение: $ |\\sigma(V)| > M $ Значит определние 6 не выполняется ни для какого конечного числа $ I \\Rightarrow f \\not\\in R[a, b] $  \n",
     "\n",
     "ч.т.д."
    ]
@@ -112,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Будем считать теперь, что функция $ f $ ограничена на $ [a, b] $. Обозначим $ M = \\underset{a \\leqslant x \\leqslant b}{\\sup} f(x), \\space\\space m = \\underset{a \\leqslant x \\leqslant b}{\\inf} f(x) $. Пусть $ T = \\{ x_0, x_1, \\dots, x_n \\} $ - произвольное разбиение $ [a, b] $. Обозначим $ M = \\underset{x_{k - 1} \\leqslant x \\leqslant x_k}{\\sup} f(x), \\space\\space m = \\underset{x_{k - 1} \\leqslant x \\leqslant x_k}{\\inf} f(x) $"
+    "Будем считать теперь, что функция $ f $ ограничена на $ [a, b] $. Обозначим $ M = \\underset{a \\leqslant x \\leqslant b}{\\sup} f(x), \\space\\space m = \\underset{a \\leqslant x \\leqslant b}{\\inf} f(x) $. Пусть $ T = \\{ x_0, x_1, \\dots, x_n \\} $ - произвольное разбиение $ [a, b] $. Обозначим $ M_k = \\underset{x_{k - 1} \\leqslant x \\leqslant x_k}{\\sup} f(x), \\space\\space m_k = \\underset{x_{k - 1} \\leqslant x \\leqslant x_k}{\\inf} f(x) $"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "source": [
     "### Лемма 3\n",
     "\n",
-    "Пусть $ T = \\{ x_0, x_1, \\dots, x_n \\} $ - разбиение $ [a, b], T' = T \\cup \\{ x_1', \\dots, x_l' \\} $. Тогда $ 0 \\leqslant S(T) - S(T') \\leqslant (M - m)\\cdot l\\cdot\\Delta_t $ $ \\left(0 \\leqslant s(T') - s(T) \\leqslant (M - m)\\cdot l\\cdot\\Delta_t \\right) $.\n",
+    "Пусть $ T = \\{ x_0, x_1, \\dots, x_n \\} $ - разбиение $ [a, b], T' = T \\cup \\{ x_1', \\dots, x_l' \\} $. Тогда $ 0 \\leqslant S(T) - S(T') \\leqslant (M - m)\\cdot l\\cdot\\Delta_{T'} $ $ \\left(0 \\leqslant s(T') - s(T) \\leqslant (M - m)\\cdot l\\cdot\\Delta_{T'} \\right) $.\n",
     "\n",
     "### Доказательство\n",
     "\n",
@@ -214,7 +214,7 @@
    "source": [
     "### Лемма 6. Основная лемма Дарбу\n",
     "\n",
-    "$ I^* = \\underset{\\Delta_t \\to 0}{\\lim} S(T) \\space\\space (I_* = \\underset{\\Delta_t \\to 0}{\\lim} s(T)) $, т.е. $ \\forall \\varepsilon > 0 \\space \\exists \\delta(\\varepsilon) > 0 $, т.ч. $ \\forall T $ - разбиение $ [a, b], \\Delta_T < \\delta: \\space |S(T) - I^*| < \\varepsilon \\space\\space (|I_* - s(T)| < \\varepsilon) $\n",
+    "$ I^* = \\underset{\\Delta_T \\to 0}{\\lim} S(T) \\space\\space (I_* = \\underset{\\Delta_T \\to 0}{\\lim} s(T)) $, т.е. $ \\forall \\varepsilon > 0 \\space \\exists \\delta(\\varepsilon) > 0 $, т.ч. $ \\forall T $ - разбиение $ [a, b], \\Delta_T < \\delta: \\space |S(T) - I^*| < \\varepsilon \\space\\space (|I_* - s(T)| < \\varepsilon) $\n",
     "\n",
     "### Доказательство\n",
     "\n",
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Теорема 2. Критерий Римана интегрируемрсти функции\n",
+    "### Теорема 2. Критерий Римана интегрируемости функции\n",
     "\n",
     "Пусть $ f $ определена и ограничена на $ [a, b]. \\space\\space f \\in R[a, b] \\Leftrightarrow \\forall \\varepsilon > 0 \\space\\space \\exists T $ - разбиение $ [a, b] $, т.ч. $ 0 \\leqslant S(T) - s(T) < \\varepsilon $\n",
     "\n",
