Fixed more typos

--- a/Calculus/2nd-Semester/Lectures/8.ipynb
+++ b/Calculus/2nd-Semester/Lectures/8.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "$ f(x) = 0 \\space\\space (1) $\n",
     "\n",
-    "Пусть известно, чтона некоторос отрезке $ [a, b] $ функция $ f $ строго монотонна и $ f(x)f(b) < 0 $. Тогда $ \\exists!c \\in [a, b]: f(c) = 0 $"
+    "Пусть известно, чтона некоторос отрезке $ [a, b] $ функция $ f $ строго монотонна и $ f(a)f(b) < 0 $. Тогда $ \\exists!c \\in [a, b]: f(c) = 0 $"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "source": [
     "### Теорема 1\n",
     "\n",
-    "Пусть $ x_n = F(x_{n - 1}) $, тогад $ \\exists \\underset{n \\to +\\infty}{\\lim} = c $, где $ c $ - корень уравнения $ (1) $.\n",
+    "Пусть $ x_n = F(x_{n - 1}) $, тогда $ \\exists \\underset{n \\to +\\infty}{\\lim} x_n = c $, где $ c $ - корень уравнения $ (1) $.\n",
     "\n",
     "### Доказательство\n",
     "\n",
